# celery-tutorial

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
apps/beat/: celeryconfig.py  dockerfile  run.py
apps/beat/tasks/: schedule.py  test.py
apps/publisher/: base.py  dockerfile  rabbit.py  run.py
apps/rest-api/: dockerfile  rabbit.py  run.py
apps/worker/: config.py  dockerfile  run.py
apps/worker/tasks/: schedule.py  sum.py  test.py
