[tool.poetry]
name = "celery-temp"
version = "0.1.0"
description = ""
authors = ["dev0128 <joo@clo-guard.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
redis = "^5.0.8"
fastapi = {extras = ["standard"], version = "^0.112.2"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
